teaching staff implemented and integrated

--- a/index.html
+++ b/index.html
@@ -2,13 +2,75 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- 🔍 SEO TITLE (English + Hindi) -->
     <title>
-      Shivsagar Sevabhavi Shikshan Prasarak Mandal, Chhatrapati Sambhajinagar’s
-      Arts, Science and Commerce College
+      Shivsagar Sevabhavi Shikshan Prasarak Mandal | Arts, Science & Commerce
+      College, Chhatrapati Sambhajinagar | शिवसागर सेवाभावी शिक्षण प्रसारक मंडळ
     </title>
+
+    <!-- 🔍 META DESCRIPTION (English + Hindi) -->
+    <meta
+      name="description"
+      content="Arts, Science and Commerce College run by Shivsagar Sevabhavi Shikshan Prasarak Mandal, Chhatrapati Sambhajinagar. NAAC accredited institution with experienced teaching staff.
+      शिवसागर सेवाभावी शिक्षण प्रसारक मंडळ द्वारा संचालित कला, विज्ञान व वाणिज्य महाविद्यालय, छत्रपती संभाजीनगर."
+    />
+
+    <!-- 🔍 KEYWORDS (VERY IMPORTANT FOR HINDI SEARCH) -->
+    <meta
+      name="keywords"
+      content="
+      Shivsagar College,
+      Arts Science Commerce College Sambhajinagar,
+      NAAC College Maharashtra,
+      Rural College Maharashtra,
+      शिवसागर कॉलेज,
+      कला विज्ञान व वाणिज्य महाविद्यालय,
+      छत्रपती संभाजीनगर कॉलेज,
+      ग्रामीण महाविद्यालय महाराष्ट्र,
+      शिवसागर सेवाभावी शिक्षण प्रसारक मंडळ
+      "
+    />
+
+    <meta
+      name="author"
+      content="Shivsagar Sevabhavi Shikshan Prasarak Mandal"
+    />
+
+    <!-- 🌐 Open Graph (WhatsApp / Facebook) -->
+    <meta
+      property="og:title"
+      content="Arts, Science & Commerce College | Shivsagar Sevabhavi Shikshan Prasarak Mandal | शिवसागर सेवाभावी शिक्षण प्रसारक मंडळ"
+    />
+    <meta
+      property="og:description"
+      content="Explore faculty profiles, academic programs and facilities.
+      कला, विज्ञान व वाणिज्य महाविद्यालय – अनुभवी प्राध्यापक व दर्जेदार शिक्षण."
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Shivsagar ASC College" />
+
+    <!-- 🐦 Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Shivsagar ASC College | शिवसागर सेवाभावी शिक्षण प्रसारक मंडळ"
+    />
+    <meta
+      name="twitter:description"
+      content="Quality higher education with experienced faculty.
+      दर्जेदार उच्च शिक्षण व अनुभवी शिक्षक."
+    />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
